# 3DScanning

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  abonormals  fast_translatin_error  main.cpp  plot.py  sgbm_orb
Libs/: Eigen.h  Evaluate.h  ICPOptimizer.h  NearestNeighbour.h  OpenCVLib.h  Pipeline.h  PointCloud.h  ProcrustesAligner.h  SimpleMesh.h  Types.h  Utils.h  VirtualSensor.h  depth_evaluation.h  io_disp.h  normals.h
